@@ -1,23 +1,39 @@
 TO DO
 
++ before 4.0pre1:
+
+- JDK 1.3: about box broken
 - version number in splash screen
-- frame.setState(Frame.NORMAL);
-- plugin size reporting
 - broken bracket matching
 - update tool bar, context option panes for action set API
-- Shift+TAB on Java 1.1
 - (String)buffer.getProperty(): bad
   buffer.getIntegerProperty(),
   buffer.getStringProperty()?
 - macro guide entry for Andre's Vertical Paste macro
-- line-uncomment command
-- find btn no work
 - new goodies need to be documented
 - installer: show GPL
+- improved window docking:
+  - docking option pane changes take effect immediately
+  - action shown in menu bar is not a toggle action
+  - '<name>-toggle' and '<name>-to-front' actions, not in menus
+  - maybe dockables.xml, a la actions.xml
+- new document model that uses less memory than the Swing document
+- prev line fold gutter bug
+- folding paint up bug
+- expand-fold too aggressive
+- editing on last line shouldn't cause scrolling
+
++ later:
+
+- frame.setState(Frame.NORMAL);
+- plugin size reporting
+- Shift+TAB on Java 1.1
+- line-uncomment command
+- find btn no work
 - custom stylesheet: no xmlns
 - JComponent.requestDefaultFocus(): new 1.4 method
 - eval-for-selected-lines doesn't work with rectangular selection
-- colors not loaded initially
+- fs browser colors not loaded initially sometimes?
 
 + features:
 
@@ -31,11 +47,6 @@ TO DO
 - changing read-only flag in buffer options
 - after a VFSUpdate for a mode file is received, reload that mode automatically
 - after a VFSUpdate for a mode catalog is received, reload all modes
-- improved window docking:
-  - docking option pane changes take effect immediately
-  - action shown in menu bar is not a toggle action
-  - '<name>-toggle' and '<name>-to-front' actions, not in menus
-  - maybe dockables.xml, a la actions.xml
 - file system browser:
   - option pane for changing colorization settings
   - new UI layout:
@@ -50,7 +61,6 @@ TO DO
     - ~ goes to home directory
     - / goes to roots:
     - - goes to buffer directory
-  - smaller 14x14 icons
   - easier way for plugins to add right-click menu commands
   - new VFS methods:
     int getUnixPermissions()
@@ -68,7 +78,6 @@ TO DO
   - fold navigator
 - HyperSearch should highlight search results
 - caret beyond end of line
-- new document model that uses less memory than the Swing document
 - directory chooser dialog box
 - graphical regular expression editor
 - appendix in plugin guide on contributing plugins
@@ -138,10 +147,7 @@ TO DO
 - a line consisting entirely of spaces & word wrap
 - switching option panes real fast
 - fix '... is not a function name' when running openjade
-- GUIUtilities method that makes sure popups appear within the screen
-  bounds
 - vfs browser: >1 request error when clicking 'up'?
-- prev line fold gutter bug
 - tabbing to text area fails
 - zlib decompression errors in plugin manager
 - failed saves should not clear the dirty flag
@@ -149,8 +155,6 @@ TO DO
 - get rid of final blank page of user's guide
 - aborts not always fired
 - fix dragStart handling in DockableWindowContainer.TabbedPane
-- folding paint up bug
-- expand-fold too aggressive
 - macro guide: JOptionPane not a good idea for getting user input?
 - globalColors setting:
   - tree controls, file system browser icons, tool bar icons look a bit
@@ -159,7 +163,6 @@ TO DO
   - selected borders in list, tree, table wrong colors
   - updateUI doesn't update tree colors
   - restart should not be necessary for 'globalColors' to take effect
-- editing on last line shouldn't cause scrolling
 - 'Stop' in plugin manager needs to be handled more gracefully
 - binding an action to ` doesn't work
 - evalutate for selected lines: > 1 selection per line
