@@ -29,6 +29,7 @@ JEDIT 4.0 VERSION HISTORY
 
 + Enhancements
 
+- New splash screen and about box (Kris Kopicki)
 - HTML documentation is now generated using DocBook XSL 1.44 stylesheets
 - Option in activity log window to automatically scroll to bottom on
   output (Dirk Moebius)
@@ -41,7 +42,6 @@ JEDIT 4.0 VERSION HISTORY
   - Same for the overwrite status; it now shows 'ins' or 'ovr'
   - I/O progress display replaced with a Java heap memory indicator
   - I/O status is now shown in the message area of the status bar
-- New splash screen and about box (Kris Kopicki)
 - New color scheme
 - Pressing Tab while a selection is active shifts it right by one level
   of indent
@@ -66,6 +66,9 @@ JEDIT 4.0 VERSION HISTORY
   BeanShell resolves methods at run-time.
 - Folds are now shown in the gutter as triangles, which is more
   intuitive than filled/not-filled boxes
+- jEdit now makes an effort to display popup menus on-screen. If you
+  want your plugin to do this, use the new GUIUtilities.showPopupMenu()
+  method.
 
 + Bug Fixes
 
@@ -94,6 +97,8 @@ JEDIT 4.0 VERSION HISTORY
   expressions that start with \<
 - 'Reload' command didn't preserve caret position very well if sections
   of the buffer were folded
+- When running on Java 2 version 1.3 (and possibly others), the default
+  size of the help viewer was not set properly
 
 + API Changes
 
